# CEP_BUNDLE_CORE

./: .gitignore  pyproject.toml  requirements.lock.txt
.obsidian/: workspace.json
_tentativa2_reexecucao_completa_20260220/: SSOT_SNAPSHOT_DONE.txt
_tentativa2_reexecucao_completa_20260220/ssot_snapshot/: README_SNAPSHOT.md  manifest_ssot_snapshot.json
corpus/: CORPUS_INDEX.md  README.md
corpus/lessons/: LESSONS_LEARNED.json  LESSONS_LEARNED.md  LL-20260220-W1-METHODOLOGY-001.json  LL-20260221-EXECUTION-DUAL-PASS-001.json
corpus/manifests/: corpus_manifest_v1.json  corpus_manifest_v2.json  corpus_manifest_v3.json  corpus_manifest_v4.json  corpus_manifest_v5.json  corpus_manifest_v6.json  corpus_manifest_v7.json  external_refs_manifest_v1.json
corpus/rag/: README.md  rag_config.json
docs/: CONSTITUICAO.md  LOCAL_DOCUMENT_INDEX.md  MASTERPLAN.md  SESSION_STATE_TRANSFER_PACKAGE.json  SESSION_STATE_TRANSFER_PACKAGE.md  SESSION_STATE_TRANSFER_PACKAGE_V2.json  SESSION_STATE_TRANSFER_PACKAGE_V2.md  SESSION_STATE_TRANSFER_PACKAGE_V3.json  SESSION_STATE_TRANSFER_PACKAGE_V4.json  SESSION_STATE_TRANSFER_PACKAGE_V4.md
docs/corpus/: CORPUS_MASTER.md  artefatos_referenciados.json  corpus_index.json  experimentos.json  licoes_aprendidas.json
docs/emendas/: EMENDA_TEMPLATE.md
docs/rag/: DELTA_SINCE_V3.json  DELTA_SINCE_V3.md
planning/masterplan_v2/: TASK_TREE_MASTERPLAN_V2.md  task_specs_inventory.csv
planning/task_specs/: TASK_CEP_BUNDLE_CORE_ATT2_M3W1_001_LOCATE_W1_M3_SELL_RULES_COST_V1.json  (+18 more)
scripts/: agno_rag_runner.py  agno_runner.py  run_task.py  smoke.py
(+294 files in other folders)
