[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cep-bundle-core"
version = "0.1.0"
description = "Bootstrap inicial do repositório CEP_BUNDLE_CORE"
readme = "docs/CONSTITUICAO.md"
requires-python = ">=3.11"
dependencies = [
  "agno"
]

[tool.setuptools]
package-dir = {"" = "src"}

